--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,13 @@ composeFoundation = "1.3.1"
 activityCompose = "1.9.1"
 coreSplashscreen = "1.0.1"
 sdp = "1.1.1"
+health = "1.1.0-alpha03"
+wear = "1.3.0"
+hilt = "2.49"
+hilt-navigation = "1.2.0"
+ksp = "1.9.0-1.0.13"
+permission = "0.35.1-alpha"
+circulerProgress = "3.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -39,9 +46,19 @@ androidx-compose-foundation = { group = "androidx.wear.compose", name = "compose
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "coreSplashscreen" }
 com-intuit-ssp = { group = "com.intuit.ssp", name = "ssp-android", version.ref = "sdp" }
+androidx-health = { group = "androidx.health", name = "health-services-client", version.ref = "health"}
+androidx-wear = { group = "androidx.wear", name= "wear", version.ref = "wear"}
+com-google-dagger = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt"}
+com-google-dagger-ksp = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt"}
+androidx-hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt-navigation"}
+com-google-accompanist-permission = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "permission"}
+com-mukhaellopez-circularprogressbar = { group = "com.mikhaellopez", name = "circularprogressbar", version.ref = "circulerProgress"}
+
 
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+com-google-devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp"}
+com-google-dagger-hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt"}
 
